@@ -18,6 +18,8 @@
  9-Mar-2019  - V0.23 Add implementations for stubbed out remote access.
  9-Mar-2019  - V0.24 Add URL locator test and import fix to resolve PY27 compatibility issue.
 10-Mar-2019  - V0.25 Add FileUtils.exists() method
+16-Mar-2019. - V0.26 Add class UrlRequestUtils() with general wrappers for common get and post
+                     methods and associated tests.
 #
 
 
